# eye_hand_calibration

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  mainpage.dox  manifest.xml  package.xml
eye_hand_calibration/: CMakeLists.txt  package.xml  setup.py
eye_hand_calibration/data/: correct_realsense_frame.yaml
eye_hand_calibration/include/: correct_realsense_frame.h
eye_hand_calibration/launch/: aruco_only.launch  calib_kinect.launch  calib_realsense.launch  calib_stack.launch  correct_realsense_frame.launch
eye_hand_calibration/src/: correct_realsense_frame.cpp  crop_pointcloud.cpp  csv_merge1.cpp  extract_static_transform_publisher_params.py  kuka_sim.sh  lou_extract.sh  observation_node.cpp  track_tag.py
eye_hand_calibration/src/eye_hand_calibration/: eyehand.py  eyehand_utils.py  obsmodel.py  orbit_fixed_pose.py  ptu_sim.py  track_tag.py
eye_hand_calibration/srv/: Capture.srv
launch/: calib_stack.launch
src/: crop_pointcloud.cpp  csv_merge1.cpp  eyehand.py  full_calib.py  lou_extract.sh  observation_node.cpp  obsmodel.py  orbit_tag.py  plane_fit.cpp  ptu_sim.py  static_xform_to_xyzrpy.py  track_tag.py  update_urdf.py
srv/: Capture.srv
